3.8.0
=====
Apr 2, 2022
- Introduce `@Eager` and `@Lazy` annotations for `X defined by Y` DSL steps
  - `@Eager` evaluates Y on the spot and assigns the value to X for subsequent reuse
  - `@Lazy` evaluates Y when referenced the first time and assigns the value to X for subsequent reuse
  - Neither (the default) evaluates Y when referenced every time and assigns the value to X for one-time use

3.7.3
=====
Mar 31, 2022
- Update dependencies to eliminate transitive vulnerabilities:
  - Update tika-core from v1.22 to v1.26
  - Update guava from v29.0-jre to v31.1-jre

3.7.2
=====
Mar 31, 2022
  - Update dependencies to eliminate transitive vulnerabilities:
    - Update jackson-databind from v2.10.2 to v2.13.2.2
    - Update guava from v28.2-jre to v29.0-jre
    - Update tika-core from v1.20 to v1.22

3.7.1
=====
Mar 31, 2022
- Log error instead of failing when timing out waiting for video files

3.7.0
=====
Mar 29, 2022
- Add video attachments to HTML reports
- Update scala from v3.1.0 to v3.1.1
- Update scala-csv from v1.3.8 to v1.3.10
- Update json-path from v2.6.0 to v2.7.0
- Update joda-time from v2.10.12 to 2.10.14
- Update scalatags from v0.9.4 to v0.11.1
- Update htmlCleaner from v2.25 to v2.26
- Update config from v1.4.1 to v1.4.2
- Update scalatest from v3.2.10 to v3.2.11

3.6.2
=====
Mar 24, 2022
- Invert links in HTML reports
- Fix rendering of non expanded outlines in HTML reports

3.6.1
=====
Mar 23, 2022
- Skip empty step defs

3.6.0
=====
Mar 22, 2022
- Treat  `true` and `false` string attribute bindings as booleans
  - So now , the `x` in `x is "true"` will be bound as a JavaScript expression instead of a plain string
    enabling it to be used as a boolean condition in control flow steps (if, while or until steps).

3.5.1
=====
Mar 11, 2022
- Fix if conditions match to capture condition after last if keyword

3.5.0
=====
Mar 9, 2022
- Add support for custom messages to all assertion steps using `: "<message>"` suffix.
  - Example: 