@@ -142,7 +142,7 @@ trait SpecNormaliser extends BehaviorRules {
               outline.sourceRef map { sref =>
                 SourceRef(sref.file, rowLineNo)
               },
-              outline.tags.filter(t => t.name != ReservedTags.StepDef.toString && t.name != ReservedTags.Examples.toString),
+              outline.tags.filter(t => t.name != Annotations.StepDef.toString && t.name != Annotations.Examples.toString),
               if (FeatureKeyword.isScenarioTemplate(outline.keyword)) FeatureKeyword.nameOf(FeatureKeyword.Example) else FeatureKeyword.nameOf(FeatureKeyword.Scenario),
               s"${resolveParams(outline.name, params)._1}${if (exs.name.length > 0) s" -- ${exs.name}" else ""}",
               outline.description.map(line => resolveParams(line, params)._1),
